first complete styling

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <title>Webshop</title>
 </head>
 
-<body style="margin-top: 5rem">
+<body style="margin: 0; margin-top: 5rem">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
